--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-file-agent",
   "version": "1.0.0",
-  "description": "\"Every file deserves to be treated equally\" - High performant Vue file upload component with elegant and distinguishable previews for every file type and support for drag and drop, validations, default uploader with progress support and externally customizable in the \"vue way\"",
-  "main": "src/index.js",
+  "description": "High performant Vue file upload component with elegant and distinguishable previews for every file type and support for drag and drop, validations, default uploader with progress support and externally customizable in the \"vue way\"",
+  "main": "dist/vue-file-agent.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name vue-file-agent ./src/index.js",
@@ -27,6 +27,10 @@
     "url": "https://github.com/safrazik/vue-file-agent/issues"
   },
   "homepage": "https://github.com/safrazik/vue-file-agent#readme",
+  "files": [
+    "/src",
+    "/dist",
+  ],
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
