Add initial test support

--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Vue File Agent
-tagline: File Input with Preview, Drag&Drop fro Vue
+tagline: Every file deserves to be treated equally
 email: safrazik@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Aw
+  High performant Vue file upload component with elegant and distinguishable previews for every file type and support for drag and drop, validations, default uploader with progress support and externally customizable in "vue way"
 baseurl: "/vue-file-agent" # the subpath of your site, e.g. /blog
 url: http://safrazik.github.io/vue-file-agent # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: safrazik
@@ -47,6 +47,7 @@ exclude:
   - README.md
   - vue.config.js
   - src
+  - tests
   - examples
   - the-library
 
