--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name vue-file-agent ./src/index.js",
     "watch": "vue-cli-service build --watch --target lib --name vue-file-agent ./src/index.js",
-    "upload-server": "node upload-server-examples/node/upload-server.js"
+    "upload-server": "node upload-server-examples/node/upload-server.js",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
+    "test:watch": "vue-cli-service test:unit --watch"
   },
   "repository": {
     "type": "git",
@@ -33,10 +36,22 @@
     "/src",
     "/dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.6.10"
+  },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
