--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-slicksort": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
