--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/tus-js-client": "^1.8.0",
     "@vue/cli-plugin-typescript": "^4.1.0",
     "@vue/cli-plugin-unit-jest": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "tus-js-client": "^1.8.0",
     "typescript": "^3.7.3",
     "vue-slicksort": "^1.1.3",
     "vue-template-compiler": "^2.6.11"
