Update Contributing docs

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name vue-file-agent ./src/index.ts",
-    "watch": "vue-cli-service build --watch --target lib --name vue-file-agent ./src/index.ts",
     "upload-server": "node upload-server-examples/node/upload-server.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:watch": "vue-cli-service test:unit --watch"
+    "test:watch": "vue-cli-service test:unit --watch",
+    "build:watch": "vue-cli-service build --watch --target lib --name vue-file-agent ./src/index.ts",
+    "docs:serve:dev": "jekyll serve --config _config.yml,_config_dev.yml --host 0.0.0.0",
+    "docs:serve": "jekyll serve --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
