--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "declaration": true,
-    "declarationDir": "dist/types",
+    "declarationDir": "types",
     "types": [
       "webpack-env",
       "jest"
