--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-file-agent",
-  "version": "1.5.2-beta.0",
+  "version": "1.5.2-beta.1",
   "description": "High performant Vue file upload component with elegant and distinguishable previews for every file type and support for drag and drop, validations, default uploader with progress support and externally customizable in the \"vue way\"",
   "main": "dist/vue-file-agent.umd.js",
   "types": "types/index.d.ts",
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/safrazik/vue-file-agent#readme",
   "files": [
     "/src",
-    "/dist"
+    "/dist",
+    "/types"
   ],
   "dependencies": {
     "vue": "^2.6.11"
