Fix includesFolder folder detection by using datatransfer object

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "baseUrl": ".",
     "declaration": true,
     "declarationDir": "types",
+    "downlevelIteration": true,
     "types": [
       "webpack-env",
       "jest"
