--- a/packages/core-file-agent/package.json
+++ b/packages/core-file-agent/package.json
@@ -31,10 +31,15 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^25.2.1",
+    "css-loader": "^3.5.3",
     "html-loader": "^1.1.0",
     "jest": "^26.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "sass-loader": "^8.0.2",
     "ts-jest": "^25.5.1",
     "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
