--- a/packages/core-file-agent/package.json
+++ b/packages/core-file-agent/package.json
@@ -16,6 +16,7 @@
     "watch": "webpack --env=development",
     "test": "jest --coverage",
     "test:watch": "jest --watch --coverage",
+    "serve": "npx serve",
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache"
   },
   "author": "Safraz Razik",
