Add npm prepare script

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,7 @@
     "/types"
   ],
   "scripts": {
+    "prepare": "npm run build",
     "coverage": "jest --coverage",
     "lint": "tslint -p tsconfig.json",
     "prebuild": "rimraf dist",
