--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,20 +37,26 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/react": "^16.9.35",
+    "@types/jest": "^26.0.10",
+    "@types/react": "^16.13.1",
     "@types/react-dom": "^16.9.8",
-    "css-loader": "^3.5.3",
-    "jest": "^26.0.1",
+    "css-loader": "^4.2.1",
+    "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
-    "ts-jest": "^26.1.0",
-    "ts-loader": "^7.0.5",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "ts-jest": "^26.2.0",
+    "ts-loader": "^8.0.2",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "html-loader": "^1.2.1",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^9.0.3"
   }
 }
