--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch --coverage",
     "servex": "npx serve",
-    "serve": "webpack-dev-server --env=development --open",
+    "dev": "webpack-dev-server --env=development",
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache"
   },
   "author": "Safraz Razik",
@@ -34,17 +34,18 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.10",
-    "css-loader": "^4.2.1",
-    "html-loader": "^1.2.1",
+    "css-loader": "^4.2.2",
+    "html-loader": "^1.3.0",
     "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^2.0.5",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^9.0.3",
-    "ts-jest": "^26.2.0",
-    "ts-loader": "^8.0.2",
+    "sass-loader": "^10.0.1",
+    "ts-jest": "^26.3.0",
+    "ts-loader": "^8.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
