--- a/package.json
+++ b/package.json
@@ -40,22 +40,24 @@
     "/types"
   ],
   "dependencies": {
-    "vue": "^2.6.11"
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/tus-js-client": "^1.8.0",
-    "@vue/cli-plugin-typescript": "^4.3.1",
-    "@vue/cli-plugin-unit-jest": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-unit-jest": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/test-utils": "1.0.2",
-    "node-sass": "^4.14.1",
+    "@vue/vue2-jest": "^29.2.6",
     "prettier": "2.0.5",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.69.4",
+    "sass-loader": "^10.1.1",
+    "ts-jest": "^29.1.1",
     "tus-js-client": "^2.1.1",
-    "typescript": "^3.9.2",
+    "typescript": "^4.9.2",
     "vue-slicksort": "^1.1.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "postcss": {
     "plugins": {
